--- a/file.html
+++ b/file.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My First App</title>
+    <title>My Simple List</title>
 </head>
 <body>
-    <h1>Welcome to Best Deal Finder</h1>
-    <p>Search products and find best offers!</p>
-    <input type="text" placeholder="Enter product name">
-    <button>Search</button>
+    <h2>My Favorite Fruits</h2>
+    <ul>
+        <li>Apple</li>
+        <li>Mango</li>
+        <li>Banana</li>
+        <li>Orange</li>
+    </ul>
 </body>
 </html>
